# hackmatch

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build_and_install.bat  hackmatch.sln  install.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/: aim-and-raycasting.md  capture.md  installation.md  movement.md  scripts.md  updating-bindings.md
docs/game-re/: README.md  bindings.md  contracts.md  raw-decompiles.md
hackmatch/: hackmatch.vcxproj  hackmatch.vcxproj.filters  hm_config.cpp  hm_config.h  hm_enums.h  hm_global_vars.h  hm_hacks.cpp  hm_hacks.h  hm_helper.cpp  hm_helper.h  hm_variables.h  hm_version.h  includes.h  main.cpp
hackmatch/base/: colors.h
hackmatch/data/fonts/: fa.h  fa_data.h  roboto.h
hackmatch/data/images/: images.h
hackmatch/esp/: hm_esp.cpp  hm_esp.h
hackmatch/gui/: hm_gui.cpp  hm_gui.h  hm_gui_base.cpp  hm_gui_widgets.cpp  main_window.cpp
hackmatch/hooks/: hm_hooks.cpp  hm_hooks.h
hackmatch/il2cpp/: hm_il2cpp_helper.cpp  hm_il2cpp_helper.h  structures.h
hackmatch/sdk/: hm_sdk.cpp  hm_sdk.h
images/: README.md
scripts/: build_release.bat  find_redmatch.ps1  install_enforcer.bat  package_release.ps1  test_installer.ps1
src/: main.cpp
src/core/: build_info.cpp  build_info.h  config_manager.cpp  config_manager.h  game.cpp  game.h  game_offsets.h  il2cpp_api.cpp  il2cpp_api.h  logger.cpp  logger.h  settings.cpp  settings.h
src/features/: esp.cpp  esp.h  esp_players.cpp  esp_players.h  feature_limits.h  gameplay.cpp  gameplay.h  gameplay_items.cpp  gameplay_items.h
src/platform/: hooks.cpp  hooks.h  render_hooks.cpp
src/ui/: assets.rc  imgui_menu.cpp  imgui_menu.h  logo.cpp  logo.h  menu.cpp  menu.h  preview_main.cpp  resource.h  theme.cpp  theme.h  widgets.cpp  widgets.h
tests/: build_info_tests.cpp  config_manager_tests.cpp  feature_limits_tests.cpp
